# Loupe

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  DEMO.md  HANDOFF.md  HANDOFF_PHASE7.md  README.md  V2_CHECKLIST.md  claude.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
benchmarks/: api_latency.py  sdk_overhead.py
dashboard/: .env.local.example  next.config.ts  package-lock.json  package.json  sentry.client.config.ts
dashboard/app/: globals.css  layout.tsx  loading.tsx  page.tsx
dashboard/components/: AutoRefresh.tsx  BranchDiff.tsx  BranchEditor.tsx  CodeBlock.tsx  ReplayDiff.tsx  ReplayForm.tsx  SpanTree.tsx  TextDiff.tsx  TopBar.tsx  badges.tsx  motion.tsx
docs/: B1-replay-decision-shareable.md  design-branch-tree.md  design-deterministic-replay.md  design-replay-side-effects.md
notes/: 01-monorepo-scaffolding.md  02-docker-postgres.md  03-fastapi-health.md  04-alembic-schema.md  05-traces-ingestion.md  06-traces-list.md  07-traces-detail.md  08-auth-coverage.md  09-sdk-trace-decorator.md  10-sdk-span.md  11-12-sdk-integrations.md  13-groq-instrumentation.md  14-async-batch-flush.md  15-dashboard-traces-list.md  16-trace-detail-span-tree.md  17-replay-ui.md  18-replay-diff.md  19-sentry-structlog.md  20-cinerater-example.md  21-deployment.md  22-v2-replay-engine-design.md  23-server-test-suite.md  24-branch-replay-engine.md  25-sdk-side-replay.md  26-branch-diff-view.md  README.md
sdk/: README.md  pyproject.toml
sdk/loupe/: __init__.py  _replay.py  cli.py  client.py  core.py  models.py
sdk/loupe/integrations/: anthropic.py  groq.py  openai.py
sdk/tests/: test_cli.py  test_client.py  test_core.py  test_groq_integration.py  test_replay.py
server/: .env.example  alembic.ini  requirements.txt  start.sh
(+41 files in other folders)
