[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loupe-sdk"
version = "0.1.0"
description = "Observability and replay for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["loupe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
