[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loupe-sdk"
version = "0.3.0"
description = "Observability and replay for LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aditya Chauhan", email = "adydelhi2003@gmail.com" },
]
keywords = ["llm", "observability", "tracing", "replay", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.scripts]
loupe = "loupe.cli:main"

[project.urls]
Homepage = "https://github.com/Adityachauhan12/Loupe"
Repository = "https://github.com/Adityachauhan12/Loupe"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["loupe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
